--- a/public/global.css
+++ b/public/global.css
@@ -14,7 +14,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-  font-family: "Averia Sans Libre", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;;
+  font-family: "Istok Web", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;;
 }
 
 a, .octo {
