--- a/public/global.css
+++ b/public/global.css
@@ -55,13 +55,14 @@ input, button, select, textarea {
 }
 
 select {
+  -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-image: url("./img/select-arrow.svg");
   background-size: 0.8em;
   background-position: right 0.5em top 50%;
   background-repeat: no-repeat;
-  padding-right: 1.5em;
+  padding: 0.3em 1.5em 0.3em 0.5em;
 }
 
 input:disabled {
