--- a/public/global.css
+++ b/public/global.css
@@ -95,6 +95,7 @@ button {
   transition: all 0.2s ease;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.9);
+  box-shadow: inset 0 5px 5px rgba(255,255,255,0.05), inset 0 -5px 5px rgba(0,0,0,0.1);
   cursor: pointer;
 }
 
