--- a/public/global.css
+++ b/public/global.css
@@ -47,8 +47,8 @@ input, button, select, textarea {
 	font-size: inherit;
 	padding: 0.2em 0.4em;
 	margin: 0;
-	border: 1px solid #111;
-  border-radius: 3px;
+	border: 1px solid rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
   display: inline-block;
   background: #444;
   color: white;
@@ -60,9 +60,10 @@ select {
   appearance: none;
   background-image: url("./img/select-arrow.svg");
   background-size: 0.8em;
-  background-position: right 0.5em top 50%;
+  background-position: right 0.7em top 54%;
   background-repeat: no-repeat;
-  padding: 0.3em 1.5em 0.3em 0.5em;
+  padding: 0.3em 1.5em 0.2em 0.5em;
+  border-radius: 100px;
 }
 
 input:disabled {
@@ -93,10 +94,10 @@ button {
 	padding: 0.2em 0.6em;
   outline: none;
   transition: all 0.2s ease;
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 3px;
   box-shadow: inset 0 5px 5px rgba(255,255,255,0.05), inset 0 -5px 5px rgba(0,0,0,0.1);
   cursor: pointer;
+  min-height: 25px;
 }
 
 button:disabled {
@@ -106,7 +107,8 @@ button:disabled {
 button:not(:disabled):active,
 button:not(:disabled):hover {
   background-color: #ddd;
-  color: #333;
+  border-color: #ddd;
+  color: #222;
 }
 
 button:focus {
